<?xml version="1.0" encoding="utf-8"?>

<!-- String Resources For Application -->
<resources>

    <!-- Activity Name Strings -->
    <string name="app_name">iB2D2</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="login_button">Login</string>
    <string name="password">Password</string>
    <string name="createAccount">Create Account</string>
    <string name="rootLogin">Root Login</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="files">Files</string>
    <string name="profile">Profile</string>
    <string name="newLabel">New</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_ib2d2">About iB2D2</string>
    <string name="backblaze_details"><b>Powered by BackBlaze</b>, ib2d2 for Android is built on B2 Cloud Storage. B2 Cloud Storage is an
        affordable cloud storage solution that challenges the pricing and reliability of Amazon S3,
        Microsoft Azure, and Google Cloud. B2D2 was originally developed in Python as a tool to
        assist system administrators with backup management. ib2d2 for iOS was a wrapper of B2 which
        allowed BackBlaze customers to interface with B2 Cloud via their phone. ib2d2 for Android
        does not require a BackBlaze account, adds team sharing features, increases security, and
        works to make ib2d2 more user friendly.
        </string>
    <string name="badAccess">iB2D2 requires access to the camera and gallery to function properly.
        To authorize access to the camera and gallery please visit your settings.</string>
    <string name="profileDescription">Profile Pic</string>
    <string name="editProfile">Edit Profile</string>
    <string name="teams">Teams</string>
    <string name="save">Save</string>
    <string name="avatar">Avatar:</string>
    <string name="upload">Upload Pic</string>
    <string name="name">Name:</string>
    <string name="DoB">DoB:</string>
    <string name="pick">Pick</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="acct_id">Acct ID:</string>
    <string name="settings_key">Settings Key:</string>
    <string name="bucket">Bucket:</string>
    <string name="log">Log</string>
    <string name="logout">Log Out</string>
    <string name="cloud">Cloud</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="backblaze">BackBlaze</string>
    <string name="encrypt">Encrypt</string>
    <string name="team_code">Team Code:</string>
    <string name="list_existing">List existing teams</string>
    <string name="team_share">Team Share</string>
    <string name="newBackup">Backup New Files</string>
    <string name="newBackupTypes"><i>(Supported Types: Images)</i></string>
    <string name="appVersion">ib2d2 | Version: 0.3.1-dev</string>
    <string name="createBackup">Create Backup</string>
    <string name="backupTitle">Title:</string>
    <string name="backupTitleHelper">Give your backup a name</string>
    <string name="backupDesc">Description:</string>
    <string name="backupDescHelper">Write something memorable</string>
    <string name="preview">Image Preview</string>
    <string name="b2Backup">BackBlaze Backup</string>
    <string name="fbBackup">Firebase Backup</string>
    <string name="deleteBackup">Delete Backup</string>
    <string name="shaHash">SHA-1 Hash:</string>
    <string name="timeStamp">Timestamp:</string>
    <string name="createdBy">Created By:</string>
    <string name="displayName">Display Name:</string>
    <string name="displayNameHelper">What do you want to be called?</string>
    <string name="selectAvatar">Select Avatar</string>
</resources>