<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/document"
        android:title="@string/files"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/plus"
        android:title="@string/newLabel"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/settings"
        android:title="@string/settings"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/information"
        android:title="@string/about"/>
</menu>