<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/profile_back"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:backgroundTint="@color/colorSecondary"
        android:textColor="#ffffff"
        android:layout_marginTop="100dp" />

    <Button
        android:id="@+id/profile_create_nav_button"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:backgroundTint="@color/colorSecondary"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/profile_join_nav_button"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:backgroundTint="@color/colorSecondary"
        android:textColor="#ffffff"/>
    <Button
        android:id="@+id/profile_list_teams_nav_button"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/list_existing"
        android:backgroundTint="@color/colorSecondary"
        android:textColor="#ffffff"/>
</LinearLayout>