<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acct_id"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="10dp"/>

        <!-- TODO have the text be of the actual account id -->
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acct_id" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_key"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="10dp"/>

        <!-- TODO have the text be of the actual settings key -->
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bucket"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="10dp"/>

        <!-- TODO have the text be of the actual bucket -->
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bucket" />

    </LinearLayout>

    <Button
        android:id="@+id/log_button"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:backgroundTint="@color/colorSecondary"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:backgroundTint="@color/colorSecondary"
        android:textColor="#ffffff" />

</LinearLayout>