<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/avatar"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/upload_profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/upload"
            android:backgroundTint="@color/colorSecondary"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="100dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/DoB"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/date_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pick"
            android:backgroundTint="@color/colorSecondary"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/save_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#ffffff" />

    </LinearLayout>
</LinearLayout>