<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/profileDescription" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <Button
        android:id="@+id/edit_profile"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/editProfile"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorSecondary"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/teams"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/teams"
        android:backgroundTint="@color/colorSecondary"
        android:textColor="#ffffff" />
</LinearLayout>