<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ib2d2_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText_confirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPassword"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="@color/colorSecondary"
        android:textColor="#ffffff"
        app:cornerRadius="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBack_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:backgroundTint="@color/colorSecondary"
        android:textColor="#ffffff"
        app:cornerRadius="20dp" />

</LinearLayout>