<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:theme="@style/ToolBar"
        app:popupTheme="@style/ToolBar"
        android:background="@color/colorSecondary"
        android:elevation="4dp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <ImageView
        android:id="@+id/backupImage"
        android:layout_gravity="center"
        android:layout_width="380dp"
        android:layout_height="300dp"
        android:background="@drawable/imageoutline"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView5"
        android:layout_gravity="center"
        android:gravity="right"
        android:textStyle="italic"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/preview" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:text="@string/backupTitle"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:layout_marginEnd="10dp"/>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleBackup"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/backupTitleHelper"
                >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/backupDesc"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descBackup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/backupDescHelper"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="265dp"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- TODO: add switches for encryption, etc(?) -->

    <Space
        android:layout_width="match_parent"
        android:layout_height="75dp" />

    <ProgressBar
        android:id="@+id/uploadProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorSecondaryLight"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createBackup_button"
        android:layout_gravity="center"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorSecondary"
        android:text="@string/createBackup"
        android:textColor="#ffffff"
        app:cornerRadius="20dp" />

</LinearLayout>