<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="200dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"/>
        <EditText
            android:id="@+id/team_create_name"
            android:layout_width="100dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_code"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/team_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/create_team_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#ffffff" />

    </LinearLayout>

</LinearLayout>